# supra-client

./: .dockerignore  .gitignore  Cargo.toml  Docker.README.md  Dockerfile  Makefile  README.md  customSpec.json  customSpecRaw.json  docker-compose.yml  docker.script.sh  run-parts.sh
.devcontainer/: devcontainer.json
authorization/: Cargo.toml
authorization/src/: benchmarking.rs  lib.rs  tests.rs
client/: Cargo.toml
client/src/: lib.rs  tmpmakj_x  tmpz15tl1
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  custom_rpc.rs  lib.rs  main.rs  rpc.rs  service.rs  supra_subcommands.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: create-authority-nodes.sh  create-bootnode.sh  docker.create-bootnode.sh  docker.start.sh  init.sh
supra-clan/: Cargo.toml
supra-clan/src/: lib.rs  mock.rs
supra-cli/: Cargo.toml
supra-cli/src/: lib.rs
