[package]
authors = ['Anonymous']
edition = '2018'
name = 'client'
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet worker for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parking_lot = '0.11'
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-arithmetic = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
sp-keystore = { version = '0.9', optional = true }
libp2p = "0.38.0"
sc-network = "0.9.0"

[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.1.1'

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-arithmetic/std',
	'sp-keystore/std',
    'parity-scale-codec/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
