[package]
name = 'supra-clan'
edition = '2018'
license = 'Unlicense'
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]	

[dependencies]
sp-core = { default-features = false, version = '3.0.0' }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
optional = true
version = '3.1.0'

[dependencies.frame-support]
default-features = false
version = '3.0.0'

[dependencies.frame-system]
default-features = false
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dev-dependencies.sp-io]
default-features = false
version = '3.0.0'

[dev-dependencies.sp-runtime]
default-features = false
version = '3.0.0'

[dependencies.getrandom]
features = ["js"]
version = "0.2"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
